# lmstudio-codex-bundle

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: bootstrap_lmstudio_codex.sh  run_codex_lmstudio.sh  run_lmstudio_catalog_sync.sh  run_lmstudio_catalog_tui.sh
src/lmstudio_codex_bundle/: __init__.py  bootstrap_cli.py  bundle.py  catalog_common.py  catalog_tui.py  codex_env.py  lmstudio_catalog.py  sync_cli.py
tests/: test_bundle.py  test_catalog.py
