[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lmstudio-codex-bundle"
version = "0.1.0"
description = "Portable LM Studio bootstrap and catalog tools for Codex."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "slowslow" }
]
keywords = ["codex", "lmstudio", "catalog", "bootstrap"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
lmstudio-codex-bootstrap = "lmstudio_codex_bundle.bootstrap_cli:main"
lmstudio-codex-sync = "lmstudio_codex_bundle.sync_cli:main"
lmstudio-codex-tui = "lmstudio_codex_bundle.catalog_tui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
